--- a/css.css
+++ b/css.css
@@ -513,7 +513,7 @@ footer {
   align-items: center;
   position: fixed;
   top: 80%;
-  left: 30px;
+  right: 10px;
   transform: translate(-50%);
   background-color: rgba(255, 255, 255, 0.548);
   border-radius: 100px;
