loading screen Done

--- a/css.css
+++ b/css.css
@@ -6,6 +6,10 @@
   box-sizing: inherit;
 }
 
+body {
+  background-color: #181818;
+}
+
 html {
   font-family: "Nunito", sans-serif;
   font-size: 10px;
@@ -546,4 +550,66 @@ footer {
   opacity: 1;
   transform: scale(1.4);
   color: #00ff72;
+}
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #181818;
+  z-index: 1;
+}
+.loader {
+  width: 150px;
+  height: 150px;
+  line-height: 150px;
+  margin: 100px auto;
+  position: relative;
+  box-sizing: border-box;
+  text-align: center;
+  z-index: 0;
+  text-transform: uppercase;
+  color: #00ff72;
+  top: 200px;
+}
+
+.loader:before,
+.loader:after {
+  opacity: 0;
+  box-sizing: border-box;
+  content: "\0020";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+  border: 5px solid #00ff7393;
+  box-shadow: 0 0 50px #00ff72, inset 0 0 50px #00ff72;
+}
+
+.loader:after {
+  z-index: 1;
+  -webkit-animation: gogoloader 2s infinite 1s;
+}
+
+.loader:before {
+  z-index: 2;
+  -webkit-animation: gogoloader 2s infinite;
+}
+
+@-webkit-keyframes gogoloader {
+  0% {
+    -webkit-transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    opacity: 0;
+  }
 }
