--- a/css.css
+++ b/css.css
@@ -555,21 +555,23 @@ footer {
 .loader-wrapper {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #181818;
-  z-index: 1;
+  z-index: 99;
+  display: flex;
+  justify-content: center;
 }
 .loader {
   width: 150px;
   height: 150px;
   line-height: 150px;
   margin: 100px auto;
-  position: relative;
+  position: fixed;
   box-sizing: border-box;
   text-align: center;
-  z-index: 0;
+  z-index: 99;
   text-transform: uppercase;
   color: #00ff72;
   top: 200px;
