--- a/css.css
+++ b/css.css
@@ -513,11 +513,11 @@ footer {
 }
 
 .scoial {
-  z-index: 2;
+  z-index: 1000;
   align-items: center;
   position: fixed;
-  top: 80%;
-  right: 10px;
+  top: 81%;
+  right: 0px;
   transform: translate(-50%);
   background-color: rgba(255, 255, 255, 0.548);
   border-radius: 100px;
@@ -550,6 +550,13 @@ footer {
   opacity: 1;
   transform: scale(1.4);
   color: #00ff72;
+}
+
+@media screen and (max-width: 700px) {
+  .scoial {
+    top: 77%;
+    right: -8px;
+  }
 }
 
 .loader-wrapper {
