--- a/custcss.css
+++ b/custcss.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #181818;
+  background-color: #0c0c0c;
 }
 
 html {
@@ -394,14 +394,37 @@ nav {
   color: rgba(255, 255, 255, 0.7);
 }
 
-footer {
+/* footer {
   padding: 2.5rem;
   background-color: #181818;
   text-align: center;
   color: rgba(199, 199, 199, 0.7);
   font-size: 1.2rem;
+} */
+
+footer {
+  align-items: center;
+  display: flex;
+  left: 0;
+  bottom: 0;
+  justify-content: center;
+  background-color: #0c0c0c;
+  padding: 4.5rem;
+  width: 100%;
+  height: 15%;
+  color: white;
+  position: relative;
+  font-size: 1.2rem;
 }
 
+footer span {
+  position: relative;
+  right: 5px;
+  color: #00ff72;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: 800;
+  font-style: oblique;
+}
 /* Media queries */
 
 @media screen and (min-width: 350px) {
@@ -669,10 +692,6 @@ footer {
   cursor: pointer;
 }
 
-.card:hover {
-  transform: scale(1.05);
-}
-
 .card:active {
   transform: translateY(-1px);
 }
@@ -723,9 +742,10 @@ footer {
 }
 
 .text-box-middle {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 5.5rem;
   font-weight: 700;
-  text-shadow: 2px 2px 10px #0000006c;
+  text-shadow: 10px 10px 15px #000000ca;
 }
 
 .text-box-lower {
@@ -751,19 +771,37 @@ footer {
 #front-1 {
   background-image: linear-gradient(
       145deg,
-      rgba(0, 0, 0, 0.6),
-      rgba(0, 255, 128, 0.6)
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 255, 128, 0)
     ),
     url(./images/Grapics.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: all 400ms;
+}
+
+#front-1:hover {
+  transition: all 400ms;
+  background-size: 108%;
 }
 
 #front-2 {
   background-image: linear-gradient(
       145deg,
-      rgba(31, 136, 168, 0.767),
-      rgba(14, 46, 65, 0.9)
+      rgba(0, 0, 0, 0.5),
+      rgba(133, 27, 83, 0)
     ),
-    url("https://images.unsplash.com/photo-1508599804355-8ce5238b44b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80");
+    url("./Cust/header-Deflay.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: all 400ms;
+}
+
+#front-2:hover {
+  transition: all 400ms;
+  background-size: 108%;
 }
 
 #front-3 {
@@ -772,6 +810,15 @@ footer {
       rgba(27, 27, 85, 0.9)
     ),
     url("https://images.unsplash.com/photo-1499914485622-a88fac536970?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: all 400ms;
+}
+
+#front-3:hover {
+  transition: all 400ms;
+  background-size: 108%;
 }
 
 #front-4 {
@@ -780,14 +827,31 @@ footer {
       rgba(6, 66, 48, 0.9)
     ),
     url("https://images.unsplash.com/photo-1531206715517-5c0ba140b2b8?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: all 400ms;
 }
 
+#front-4:hover {
+  transition: all 400ms;
+  background-size: 108%;
+}
 #front-5 {
   background-image: linear-gradient(
       rgba(128, 74, 190, 0.767),
       rgba(42, 6, 66, 0.9)
     ),
     url("https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: all 400ms;
+}
+
+#front-5:hover {
+  transition: all 400ms;
+  background-size: 108%;
 }
 
 #front-6 {
@@ -796,6 +860,15 @@ footer {
       rgba(20, 20, 20, 0.6)
     ),
     url("https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: all 400ms;
+}
+
+#front-6:hover {
+  transition: all 400ms;
+  background-size: 108%;
 }
 
 #front-7 {
@@ -804,8 +877,16 @@ footer {
       rgba(14, 46, 65, 0.9)
     ),
     url("https://images.unsplash.com/photo-1520881363902-a0ff4e722963?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: all 400ms;
 }
 
+#front-7:hover {
+  transition: all 400ms;
+  background-size: 108%;
+}
 @media screen and (min-width: 1024px) {
   html {
     font-size: 70.5%;
@@ -850,7 +931,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 11vh;
+  height: 12vh;
   width: 20%;
   z-index: 99;
 }
@@ -924,7 +1005,7 @@ footer {
 @media screen and (min-width: 470px) {
   .containerr .story {
     left: 50px;
-    top: 120px;
+    top: 80px;
   }
 }
 @media screen and (min-width: 700px) {
@@ -978,8 +1059,8 @@ footer {
 }
 .containerr .story1 .story-svg-img-wrapper1 img {
   position: absolute;
-  width: 59px;
-  height: 59px;
+  width: 79px;
+  height: 79px;
   object-fit: cover;
   top: 50%;
   left: 50%;
@@ -1004,7 +1085,7 @@ footer {
 @media screen and (min-width: 470px) {
   .containerr .story1 {
     left: 208px;
-    top: 120px;
+    top: 80px;
   }
 }
 
@@ -1086,13 +1167,95 @@ footer {
 @media screen and (min-width: 470px) {
   .containerr .story2 {
     left: 130px;
-    top: 120px;
+    top: 80px;
   }
 }
 
 @media screen and (min-width: 700px) {
   .containerr .story2 {
     left: 190px;
+    top: 100px;
+  }
+}
+
+.containerr .story3 {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100px;
+  width: 100px;
+  top: 90px;
+  left: 297px;
+}
+.containerr .story3 p {
+  position: relative;
+  font-weight: 700;
+  font-family: "Mulish", sans-serif;
+  color: #ffffff;
+  font-size: 14px;
+  bottom: 6px;
+}
+.containerr .story3 .story-svg-img-wrapper3 {
+  position: relative;
+  width: 72px;
+  height: 72px;
+  cursor: pointer;
+}
+
+.containerr .story3 .story-svg-img-wrapper3 svg {
+  width: 72px;
+  height: 72px;
+  pointer-events: none;
+}
+
+.containerr .story3 .story-svg-img-wrapper3 svg circle {
+  fill: #000000;
+  stroke-width: 2;
+  stroke: url(#insta-gradient2);
+  stroke-linecap: round;
+  stroke-dasharray: 6;
+  pointer-events: none;
+  transform-origin: 50% 50%;
+  animation: dash 8s linear infinite;
+}
+.containerr .story3 .story-svg-img-wrapper3 img {
+  position: absolute;
+  width: 59px;
+  height: 59px;
+  object-fit: cover;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  pointer-events: none;
+  box-shadow: 0px 0px 2px #999999;
+}
+
+@keyframes dash {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media screen and (min-width: 350px) {
+  .containerr .story3 {
+    left: 225px;
+    top: 80px;
+  }
+}
+
+@media screen and (min-width: 470px) {
+  .containerr .story3 {
+    left: 285px;
+    top: 80px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .containerr .story3 {
+    left: 270px;
     top: 100px;
   }
 }
